tests/sksl/errors/Ossfuzz516126015.glsl
### Compilation failed:

error: 1: function 'g' can exit without returning a value
int g() {
        ^...
1 error
